tests/ui/endpoint/invalid_params_ty.stderr
error[E0277]: the trait bound `FooParams: OpenapiType` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `OpenapiType` is not implemented for `FooParams`
   |
   = help: the following other types implement trait `OpenapiType`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     #[openapi_bound(Params: OpenapiType)]
   |                             ^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Params`
   |     type Params: QueryStringExtractor<Body> + Clone + Sync;
   |          ------ required by a bound in this associated type

error[E0277]: the trait bound `FooParams: Clone` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `Clone` is not implemented for `FooParams`
   |
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     type Params: QueryStringExtractor<Body> + Clone + Sync;
   |                                               ^^^^^ required by this bound in `EndpointWithSchema::Params`
help: consider annotating `FooParams` with `#[derive(Clone)]`
   |
10 + #[derive(Clone)]
11 | struct FooParams {
   |

error[E0277]: the trait bound `FooParams: StateData` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `StateData` is not implemented for `FooParams`, which is required by `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Params: QueryStringExtractor<Body>`
   |
   = help: the following other types implement trait `StateData`:
             Repo<T>
             NoopPathExtractor
             CookieJar
             Body
             OnUpgrade
             AuthStatus<T>
             AuthSource
             CorsConfig
           and $N others
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Params` to implement `QueryStringExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     type Params: QueryStringExtractor<Body> + Clone + Sync;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Params`

error[E0277]: the trait bound `FooParams: StaticResponseExtender` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `StaticResponseExtender` is not implemented for `FooParams`, which is required by `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Params: QueryStringExtractor<Body>`
   |
   = help: the following other types implement trait `StaticResponseExtender`:
             NoopPathExtractor
             NoopExtractor
             IdPlaceholder<ID>
             NoopResponseExtender
             NoopQueryStringExtractor
             FilePathExtractor
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Params` to implement `QueryStringExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     type Params: QueryStringExtractor<Body> + Clone + Sync;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Params`

error[E0277]: the trait bound `for<'de> FooParams: serde::de::Deserialize<'de>` is not satisfied
  --> tests/ui/endpoint/invalid_params_ty.rs:15:16
   |
15 | fn endpoint(_: FooParams) {
   |                ^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `FooParams`, which is required by `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Params: QueryStringExtractor<Body>`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `<endpoint___gotham_restful_endpoint as EndpointWithSchema>::Params` to implement `QueryStringExtractor<Body>`
note: required by a bound in `gotham_restful::EndpointWithSchema::Params`
  --> src/endpoint.rs
   |
   |     type Params: QueryStringExtractor<Body> + Clone + Sync;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `EndpointWithSchema::Params`
